--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-     <head>
-          <meta charset="UTF-8">
-          <title>ÑîÎ°´ï¼òÀú</title>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <title>divµÄµôÂä</title>
      </head>
      <body>
      <style>
